@@ -15,30 +15,70 @@
 	<name>id_builder</name>
 	<url>https://github.com/aegisql/id_builder</url>
 
+	<organization>
+		<name>AEGIS DATA SOLUTIONS, LLC</name>
+		<url>http://www.aegisql.com</url>
+	</organization>
+
+	<description>Ordered unique ID generator</description>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Mikhail Teplitskiy</name>
+			<id>owner</id>
+		</developer>
+	</developers>
+
+	<scm>
+		<url>git@github.com:aegisql/id_builder.git</url>
+		<connection>scm:git:git@github.com:aegisql/id_builder.git</connection>
+		<developerConnection>scm:git:git@github.com:aegisql/id_builder.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<build>
 		<plugins>
+			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-enforcer-plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.4.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.3.2</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.13.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>21</source>
+					<target>21</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2.1</version>
+				<version>3.3.0</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
 						<phase>package</phase>
 						<goals>
-							<goal>jar</goal>
+							<goal>jar-no-fork</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -47,18 +87,31 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
+				<version>3.6.3</version>
+				<configuration>
+					<source>21</source>
+				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.1</version>
+				<configuration>
+					<!--arguments>$(arguments)</arguments-->
+					<mavenExecutorId>forked-path</mavenExecutorId>
+					<useReleaseProfile>false</useReleaseProfile>
+					<!--arguments>-DskipTests</arguments-->
+					<arguments>-Psonatype-oss-release -DskipTests</arguments>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<profiles>
@@ -75,7 +128,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.4</version>
+						<version>3.2.2</version>
 						<configuration>
 							<passphrase>${gpg.passphrase}</passphrase>
 						</configuration>
@@ -92,6 +145,7 @@
 				</plugins>
 			</build>
 		</profile>
+
 	</profiles>
 	<dependencies>
 		<dependency>
@@ -101,29 +155,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<description>Unique long id generator</description>
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
 
-	<organization>
-		<name>AEGIS DATA SOLUTIONS, LLC</name>
-		<url>http://www.aegisql.com</url>
-	</organization>
-	<developers>
-		<developer>
-			<name>Mikhail Teplitskiy</name>
-			<id>owner</id>
-		</developer>
-	</developers>
-
-	<scm>
-		<url>https://github.com/aegisql/id_builder</url>
-		<connection>scm:git:git:github.com/aegisql/id_builder.git</connection>
-		<developerConnection>scm:git:https://git@github.com/aegisql/id_builder.git</developerConnection>
-	</scm>
 </project>
